[PT] temporary fix for service name / menu overlap on mobile

--- a/assets/css/nhsuk-custom.css
+++ b/assets/css/nhsuk-custom.css
@@ -26,3 +26,9 @@
         justify-content: normal;
     }
 }
+@media (max-width:453px) {
+    .nhsuk-header__service-name {
+        width: 13em;
+    }
+}
+
